<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_minimize"
        android:icon="@drawable/ic_fullscreen_exit_white_24dp"
        android:title="@string/minimize"
        app:showAsAction="ifRoom" />
    <group android:id="@+id/group_menu_pref_filtre">
    <item
        android:id="@+id/action_is_last_evolution_only"
        android:checkable="true"
        android:checked="true"
        android:title="@string/settings_last_evolution_only"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_is_with_mega_evolution"
        android:checkable="true"
        android:checked="true"
        android:title="@string/settings_is_with_mega_evoluton"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_is_with_legendary"
        android:checkable="true"
        android:checked="true"
        android:title="@string/settings_is_with_legendary"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_is_with_mythic"
        android:checkable="true"
        android:checked="true"
        android:title="@string/settings_is_with_mythic"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_is_with_ultra_beast"
        android:checkable="true"
        android:checked="true"
        android:title="@string/settings_is_with_ultra_beast"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_is_with_in_game"
        android:checkable="true"
        android:checked="false"
        android:title="@string/settings_is_with_in_game"
        app:showAsAction="never" />
    </group>
    <group>
        <item
            android:id="@+id/action_about_us"
            android:title="@string/about"
            app:showAsAction="never" />
    </group>

</menu>