<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pokedex"
            android:icon="@drawable/pokedex"
            android:title="@string/pokedex" />
        <item
            android:id="@+id/nav_simulator"
            android:icon="@drawable/simulator"
            android:title="@string/simulator" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/settings" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/about" />
        </menu>
    </item>
</menu>