<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/move_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/move_power"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.5"
        android:gravity="center"
        android:text="@string/power"
        android:textColor="@android:color/white"
        android:visibility="gone" />

    <TextView
        android:id="@+id/move_energy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.5"
        android:gravity="center"
        android:text="@string/energy"
        android:textColor="@android:color/white"
        android:visibility="gone" />

    <TextView
        android:id="@+id/move_pps"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.5"
        android:gravity="center"
        android:text="@string/pps"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/move_dpt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.5"
        android:gravity="center"
        android:text="@string/dpt"
        android:textColor="@android:color/white"
        android:visibility="gone" />

    <TextView
        android:id="@+id/move_ept"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.5"
        android:gravity="center"
        android:text="@string/ept"
        android:textColor="@android:color/white"
        android:visibility="gone" />

    <TextView
        android:id="@+id/move_dpt_x_ept"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.5"
        android:gravity="center"
        android:text="@string/dpt_x_ept"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/move_duration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.5"
        android:gravity="center"
        android:text="@string/duration"
        android:textColor="@android:color/white"
        android:visibility="gone" />

</merge>