<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.pokemongostats.view.commons.TableLabelTextFieldView
            android:id="@+id/move_name_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:labelText="@string/name"
            app:labelWeight="0.3" />

        <com.pokemongostats.view.commons.TableLabelFieldView
            android:id="@+id/move_type_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:labelText="@string/type"
            app:labelWeight="0.3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.pokemongostats.view.commons.TableLabelTextFieldView
            android:id="@+id/move_move_type_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:labelText="@string/move_type" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.pokemongostats.view.commons.TableLabelTextFieldView
            android:id="@+id/move_power_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:labelWeight="0.6"
            app:labelText="@string/power" />

        <com.pokemongostats.view.commons.TableLabelTextFieldView
            android:id="@+id/move_duration_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:labelText="@string/duration"
            app:labelWeight="0.6" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.pokemongostats.view.commons.TableLabelTextFieldView
            android:id="@+id/move_pps_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:labelText="@string/pps"
            app:labelWeight="0.6" />

        <com.pokemongostats.view.commons.TableLabelTextFieldView
            android:id="@+id/move_energy_delta_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:labelText="@string/energy"
            app:labelWeight="0.6" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.pokemongostats.view.commons.TableLabelTextFieldView
            android:id="@+id/move_power_pvp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:labelWeight="0.6"
            app:labelText="@string/power_pvp" />

        <com.pokemongostats.view.commons.TableLabelTextFieldView
            android:id="@+id/move_dpt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:labelText="@string/dpt"
            app:labelWeight="0.6" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.pokemongostats.view.commons.TableLabelTextFieldView
            android:id="@+id/move_energy_pvp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:labelText="@string/energy_pvp"
            app:labelWeight="0.6" />

        <com.pokemongostats.view.commons.TableLabelTextFieldView
            android:id="@+id/move_ept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:labelText="@string/ept"
            app:labelWeight="0.6" />
    </LinearLayout>

    <com.pokemongostats.view.commons.TableLabelTextFieldView
        android:id="@+id/move_dpt_x_ept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:labelText="@string/dpt_x_ept"
        app:labelWeight="0.5" />

</LinearLayout>