<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.pokemongostats.view.rows.PkmnDescRow
        android:id="@+id/pkmn_desc_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.pokemongostats.view.commons.CustomExpandableView
        android:id="@+id/pkmn_desc_see_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pkmn_desc_row"
        android:layout_marginTop="5sp"
        app:title="@string/see_more"/>

    <LinearLayout
        android:id="@+id/pkmn_desc_see_more_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- family -->

            <com.pokemongostats.view.commons.TableLabelTextFieldView
                android:id="@+id/pkmn_desc_family"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:labelText="@string/family"
                app:labelWeight="0.25" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- km per candy -->

            <com.pokemongostats.view.commons.TableLabelTextFieldView
                android:id="@+id/pkmn_desc_km_per_candy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                app:labelText="@string/candy" />

            <!-- candy to evolve -->

            <com.pokemongostats.view.commons.TableLabelTextFieldView
                android:id="@+id/pkmn_desc_candy_to_evolve"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                app:labelWeight="0.6"
                app:labelText="@string/to_evolve" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- km per egg -->

            <com.pokemongostats.view.commons.TableLabelTextFieldView
                android:id="@+id/pkmn_desc_field_km_per_egg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                app:labelText="@string/egg" />

            <!-- max cp -->

            <com.pokemongostats.view.commons.TableLabelTextFieldView
                android:id="@+id/pkmn_desc_field_max_cp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                app:labelWeight="0.6"
                app:labelText="@string/max_cp" />
        </LinearLayout>

        <!-- base_attack -->

        <com.pokemongostats.view.commons.TableLabelTextFieldView
            android:id="@+id/pkmn_desc_field_base_attack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:labelText="@string/base_attack" />

        <!-- base_defense -->

        <com.pokemongostats.view.commons.TableLabelTextFieldView
            android:id="@+id/pkmn_desc_field_base_defense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:labelText="@string/base_defense" />

        <!-- base_stamina -->

        <com.pokemongostats.view.commons.TableLabelTextFieldView
            android:id="@+id/pkmn_desc_field_base_stamina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:labelText="@string/base_stamina" />

        <!-- evolution -->

        <TextView
            android:id="@+id/pkmn_desc_evolutions_title"
            style="@style/TableLabelTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/evolution_family" />

        <LinearLayout
            android:id="@+id/pkmn_desc_evolutions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <!-- description -->

        <com.pokemongostats.view.commons.TableLabelTextFieldView
            android:id="@+id/pkmn_desc_field_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:labelText="@string/description"
            app:labelWeight="0.25" />

    </LinearLayout>

</merge>