<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/pkmn_desc_name"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="5sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/pkmn_desc_img"
        android:layout_width="50sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/img"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/pkmn_desc_base_attack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.2"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/attack"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/pkmn_desc_base_defense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.2"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/defense"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/pkmn_desc_base_stamina"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.2"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/stamina"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/pkmn_desc_max_cp"
        android:layout_marginEnd="@dimen/divider_thickness"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.2"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/max_cp"
        android:textColor="@android:color/white" />

</merge>