<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/tab_header">

    <TextView
        android:id="@+id/move_heander_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:text="@string/name"/>

    <TextView
        android:id="@+id/move_header_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:text="@string/type"/>

    <TextView
        android:id="@+id/move_header_power"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:text="@string/power" />

    <TextView
        android:id="@+id/move_header_dps"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:text="@string/dps" />

    <TextView
        android:id="@+id/move_header_duration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:text="@string/duration"

        android:visibility="gone"/>

</LinearLayout>