<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <AutoCompleteTextView
        android:id="@+id/search_move"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:completionThreshold="1"
        android:hint="@string/move_name_hint"
        android:textColorHint="@android:color/white" />

    <TextView
        style="@style/SectionTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description" />

    <com.pokemongostats.view.commons.MoveDescView
        android:id="@+id/move_selected_move"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/SubSectionTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pokemons_with_move" />

    <ListView
        android:id="@+id/move_pokemons_with_move"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>